--- a/gradle.properties
+++ b/gradle.properties
@@ -3,6 +3,7 @@ group=io.ballerina.stdlib
 version=1.0.0-SNAPSHOT
 puppycrawlCheckstyleVersion=8.18
 slf4jVersion=1.7.30
+testngVersion=7.4.0
 ballerinaGradlePluginVersion=0.14.1
 
 ballerinaLangVersion=2201.0.1
