Publish the constraint native APIs

--- a/native/build.gradle
+++ b/native/build.gradle
@@ -58,6 +58,28 @@ tasks.withType(Checkstyle) {
     exclude excludePattern
 }
 
+publishing {
+    publications {
+        mavenJava(MavenPublication) {
+            groupId project.group
+            artifactId "constraint-native"
+            version = project.version
+            artifact jar
+        }
+    }
+
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/ballerina-platform/module-ballerina-constraint")
+            credentials {
+                username = System.getenv("publishUser")
+                password = System.getenv("publishPAT")
+            }
+        }
+    }
+}
+
 compileJava {
     doFirst {
         options.compilerArgs = [
