Update lang version to `2201.2.0-rc1`

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,4 @@ slf4jVersion=1.7.30
 testngVersion=7.4.0
 ballerinaGradlePluginVersion=0.14.1
 
-ballerinaLangVersion=2201.2.0-20220704-165400-1b5e32c1
+ballerinaLangVersion=2201.2.0-rc1
