--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -65,4 +65,4 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
         run: |
           gh release create v$VERSION --title "module-ballerina-constraint-v$VERSION"
-          gh pr create --title "[Automated] Sync master after $VERSION release" --body "Sync main after $VERSION release"
+          gh pr create --title "[Automated] Sync main after $VERSION release" --body "Sync main after $VERSION release"
