--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -10,4 +10,7 @@ license = ["Apache-2.0"]
 distribution = "2201.2.0"
 
 [[platform.java11.dependency]]
+groupId = "io.ballerina.stdlib"
+artifactId = "constraint-native"
+version = "1.0.0"
 path = "../native/build/libs/constraint-native-1.0.0-SNAPSHOT.jar"
