--- a/gradle.properties
+++ b/gradle.properties
@@ -1,9 +1,9 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.0.1-SNAPSHOT
+version=1.1.0-SNAPSHOT
 puppycrawlCheckstyleVersion=8.18
 slf4jVersion=1.7.30
 testngVersion=7.4.0
 ballerinaGradlePluginVersion=0.14.1
 
-ballerinaLangVersion=2201.2.0
+ballerinaLangVersion=2201.3.0-rc2-20221028-130300-58bb90b9
