--- a/.github/workflows/build-with-native-tests.yml
+++ b/.github/workflows/build-with-native-tests.yml
@@ -3,7 +3,7 @@ name: Build with Native Tests
 on:
     workflow_dispatch:
         lang_tag:
-            description: Branch/Release Tag(v2201.1.0) of the distribution
+            description: Branch/Release Tag(v2201.1.0) of the Ballerina Lang
             required: true
             default: master
 
@@ -15,6 +15,7 @@ jobs:
         steps:
             - name: Checkout Repository
                 uses: actions/checkout@v2
+
             - name: Set up GraalVM
                 uses: graalvm/setup-graalvm@v1
                     with:
@@ -28,6 +29,7 @@ jobs:
                     java --version
                     gu --version
                     native-image --version
+
             - name: Build ballerina-lang
               run: |
                   git clone https://github.com/ballerina-platform/ballerina-lang.git
