--- a/.github/workflows/build-with-native-tests.yml
+++ b/.github/workflows/build-with-native-tests.yml
@@ -23,6 +23,8 @@ jobs:
                 java-version: '11'
                 components: 'native-image'
                 github-token: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Check GraalVM version
               run: |
                 echo "GRAALVM_HOME: $GRAALVM_HOME"
                 echo "JAVA_HOME: $JAVA_HOME"
