Add type-reference support

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,4 @@ slf4jVersion=1.7.30
 testngVersion=7.4.0
 ballerinaGradlePluginVersion=1.0.0
 
-ballerinaLangVersion=2201.2.0
+ballerinaLangVersion=2201.4.0-20221116-082400-3eca35ee
