--- a/gradle.properties
+++ b/gradle.properties
@@ -6,4 +6,4 @@ slf4jVersion=1.7.30
 testngVersion=7.4.0
 ballerinaGradlePluginVersion=1.0.0
 
-ballerinaLangVersion=2201.3.0-rc3
+ballerinaLangVersion=2201.2.0
