--- a/.github/workflows/central-publish.yml
+++ b/.github/workflows/central-publish.yml
@@ -17,7 +17,8 @@ jobs:
     runs-on: ubuntu-latest
     if: github.repository_owner == 'ballerina-platform'
     steps:
-      - uses: actions/checkout@v2
+      - name: Checkout Repository    
+        uses: actions/checkout@v2
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
@@ -61,6 +62,7 @@ jobs:
           packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
         run: |
+          sed -i 's/version=\(.*\)-SNAPSHOT/version=\1/g' gradle.properties
           ./gradlew clean build -PpublishToCentral=true
 
       - name: Ballerina Central Stage Push
@@ -73,4 +75,5 @@ jobs:
           packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
           GITHUB_TOKEN: ${{ secrets.BALLERINA_BOT_TOKEN }}
         run: |
+          sed -i 's/version=\(.*\)-SNAPSHOT/version=\1/g' gradle.properties
           ./gradlew clean build -PpublishToCentral=true
