--- a/native/build.gradle
+++ b/native/build.gradle
@@ -29,6 +29,7 @@ dependencies {
 
     implementation group: 'org.ballerinalang', name: 'ballerina-runtime', version: "${ballerinaLangVersion}"
     implementation group: 'org.slf4j', name: 'slf4j-jdk14', version: "${slf4jVersion}"
+    implementation group: 'org.ballerinalang', name: 'value', version: "${ballerinaLangVersion}"
 }
 
 checkstyle {
