--- a/.github/workflows/build-with-bal-test-native.yml
+++ b/.github/workflows/build-with-bal-test-native.yml
@@ -20,7 +20,11 @@ on:
     pull_request:
         branches: 
             - main
-        types: [labeled, synchronize, reopened]
+        types: [opened, synchronize, reopened, labeled, unlabeled]
+
+concurrency:
+    group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.run_id }}
+    cancel-in-progress: true
 
 jobs:
     call_stdlib_workflow:
