--- a/compiler-plugin-tests/build.gradle
+++ b/compiler-plugin-tests/build.gradle
@@ -20,6 +20,12 @@ plugins {
     id 'java'
     id 'checkstyle'
     id 'com.github.spotbugs'
+    id 'jacoco'
+}
+
+jacoco {
+    toolVersion = "${jacocoVersion}"
+    reportsDirectory = file("$project.buildDir/reports/jacoco")
 }
 
 description = 'Ballerina - Constraint Compiler Plugin Tests'
@@ -82,6 +88,15 @@ compileJava {
 test {
     systemProperty "ballerina.offline.flag", "true"
     useTestNG()
+    finalizedBy jacocoTestReport
+}
+
+jacocoTestReport {
+    dependsOn test
+    reports {
+        xml.enabled true
+    }
+    sourceSets project(':constraint-compiler-plugin').sourceSets.main
 }
 
 test.dependsOn ":constraint-ballerina:build"
