--- a/gradle.properties
+++ b/gradle.properties
@@ -5,5 +5,6 @@ puppycrawlCheckstyleVersion=8.18
 slf4jVersion=1.7.30
 testngVersion=7.4.0
 ballerinaGradlePluginVersion=1.0.0
+jacocoVersion=0.8.8
 
 ballerinaLangVersion=2201.4.0
