--- a/gradle.properties
+++ b/gradle.properties
@@ -7,4 +7,4 @@ testngVersion=7.4.0
 ballerinaGradlePluginVersion=1.0.0
 jacocoVersion=0.8.8
 
-ballerinaLangVersion=2201.4.0
+ballerinaLangVersion=2201.5.0-20230404-105200-b8aec90e
