Add time module as test dependency

--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -106,7 +106,7 @@ publishing {
     }
 }
 
-updateTomlFiles.dependsOn unpackJballerinaTools
+updateTomlFiles.dependsOn copyStdlibs
 
 test.dependsOn ":${packageName}-native:build"
 test.dependsOn ":${packageName}-compiler-plugin:build"
