--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,6 @@ ballerinaGradlePluginVersion=1.0.3
 jacocoVersion=0.8.8
 
 ballerinaLangVersion=2201.4.0
+
+# Test dependency
+stdlibTimeVersion=2.2.4
