Update lang version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.2.1-SNAPSHOT
+version=1.3.0-SNAPSHOT
 puppycrawlCheckstyleVersion=8.18
 slf4jVersion=1.7.30
 testngVersion=7.4.0
 ballerinaGradlePluginVersion=1.1.0
 jacocoVersion=0.8.8
 
-ballerinaLangVersion=2201.5.0
+ballerinaLangVersion=2201.6.0-20230614-102000-d1aade7d
 
 # Test dependency
-stdlibTimeVersion=2.2.4
+stdlibTimeVersion=2.3.0-20230614-151000-47027a9
