--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,16 +1,19 @@
 [package]
 org = "ballerina"
 name = "constraint"
-version = "1.2.1"
+version = "1.3.0"
 authors = ["Ballerina"]
 keywords = ["constraint", "validation"]
 repository = "https://github.com/ballerina-platform/module-ballerina-constraint"
 icon = "icon.png"
 license = ["Apache-2.0"]
-distribution = "2201.5.0"
+distribution = "2201.7.0"
+
+[platform.java11]
+graalvmCompatible = true
 
 [[platform.java11.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "constraint-native"
-version = "1.2.1"
-path = "../native/build/libs/constraint-native-1.2.1-SNAPSHOT.jar"
+version = "1.3.0"
+path = "../native/build/libs/constraint-native-1.3.0-SNAPSHOT.jar"
