--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ testngVersion=7.6.1
 ballerinaGradlePluginVersion=2.0.0
 jacocoVersion=0.8.10
 
-ballerinaLangVersion= 2201.7.0
+ballerinaLangVersion=2201.8.0-20230726-132400-5c2e50ed
 
 # Test dependency
 stdlibTimeVersion=2.3.0
