--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ version=1.3.1-SNAPSHOT
 puppycrawlCheckstyleVersion=10.12.0
 slf4jVersion=1.7.30
 testngVersion=7.6.1
-ballerinaGradlePluginVersion=2.0.0
+ballerinaGradlePluginVersion=2.0.1-SNAPSHOT
 jacocoVersion=0.8.10
 
 ballerinaLangVersion=2201.8.0-20230726-145300-b2bdf796
