--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,10 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.3.1-SNAPSHOT
+version=1.4.0-SNAPSHOT
 puppycrawlCheckstyleVersion=10.12.0
 slf4jVersion=1.7.30
 testngVersion=7.6.1
-ballerinaGradlePluginVersion=2.0.1-SNAPSHOT
+ballerinaGradlePluginVersion=2.0.1
 jacocoVersion=0.8.10
 
 ballerinaLangVersion=2201.8.0-20230726-145300-b2bdf796
