--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,19 +1,19 @@
 [package]
 org = "ballerina"
 name = "constraint"
-version = "1.3.0"
+version = "1.4.0"
 authors = ["Ballerina"]
 keywords = ["constraint", "validation"]
 repository = "https://github.com/ballerina-platform/module-ballerina-constraint"
 icon = "icon.png"
 license = ["Apache-2.0"]
-distribution = "2201.7.0"
+distribution = "2201.8.0"
 
-[platform.java11]
+[platform.java17]
 graalvmCompatible = true
 
-[[platform.java11.dependency]]
+[[platform.java17.dependency]]
 groupId = "io.ballerina.stdlib"
 artifactId = "constraint-native"
-version = "1.3.0"
-path = "../native/build/libs/constraint-native-1.3.0.jar"
+version = "1.4.0"
+path = "../native/build/libs/constraint-native-1.4.0-SNAPSHOT.jar"
