Update time version

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,4 @@ jacocoVersion=0.8.10
 ballerinaLangVersion=2201.8.0-20230726-145300-b2bdf796
 
 # Test dependency
-stdlibTimeVersion=2.3.0
+stdlibTimeVersion=2.4.0-20230810-115600-b28bb07
