--- a/.github/workflows/build-with-bal-test-graalvm.yml
+++ b/.github/workflows/build-with-bal-test-graalvm.yml
@@ -33,7 +33,7 @@ jobs:
         if: ${{ github.event_name != 'schedule' || (github.event_name == 'schedule' && github.repository_owner == 'ballerina-platform') }}
         uses: ballerina-platform/ballerina-standard-library/.github/workflows/build-with-bal-test-graalvm-template.yml@2201.7.x
         with:
-            lang_tag: ${{ inputs.lang_tag | '2201.7.x' }}
+            lang_tag: ${{ inputs.lang_tag }}
             lang_version: ${{ inputs.lang_version }}
             native_image_options: ${{ inputs.native_image_options }}
             additional_ubuntu_build_flags: '-x :constraint-compiler-plugin-tests:test'
