--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,7 @@ testngVersion=7.6.1
 ballerinaGradlePluginVersion=2.2.3
 jacocoVersion=0.8.10
 
-ballerinaLangVersion=2201.8.0
+ballerinaLangVersion=2201.9.0-20240419-152500-bd530dd2
 
 # Test dependency
 stdlibTimeVersion=2.4.0
