--- a/gradle.properties
+++ b/gradle.properties
@@ -6,8 +6,9 @@ slf4jVersion=1.7.30
 testngVersion=7.6.1
 ballerinaGradlePluginVersion=2.2.3
 jacocoVersion=0.8.10
+githubSpotbugsVersion=6.0.18
 
-ballerinaLangVersion=2201.8.0
+ballerinaLangVersion=2201.10.0-20240926-231800-8a5a4343
 
 # Test dependency
 stdlibTimeVersion=2.4.0
