--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,13 @@
 org.gradle.caching=true
 group=io.ballerina.stdlib
-version=1.5.1-SNAPSHOT
+version=1.6.0-SNAPSHOT
 puppycrawlCheckstyleVersion=10.12.0
 slf4jVersion=1.7.30
 testngVersion=7.6.1
 ballerinaGradlePluginVersion=2.2.3
 jacocoVersion=0.8.10
 
-ballerinaLangVersion=2201.8.0
+ballerinaLangVersion=2201.11.0-20241101-105200-f94714be
 
 # Test dependency
-stdlibTimeVersion=2.4.0
+stdlibTimeVersion=2.6.0-20241106-140700-1bb5302
