[Automated] Update the lang version to 2201.12.0-20250228-115200-f38db343

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ ballerinaGradlePluginVersion=2.3.0
 jacocoVersion=0.8.10
 githubSpotbugsVersion=6.0.18
 
-ballerinaLangVersion=2201.11.0
+ballerinaLangVersion=2201.12.0-20250228-115200-f38db343
 
 # Test dependency
 stdlibTimeVersion=2.6.0
