--- a/gradle.properties
+++ b/gradle.properties
@@ -8,7 +8,7 @@ ballerinaGradlePluginVersion=2.3.0
 jacocoVersion=0.8.10
 githubSpotbugsVersion=6.0.18
 
-ballerinaLangVersion=2201.11.0
+ballerinaLangVersion=2201.12.0-20250228-201300-8d411a0f
 
 # Test dependency
 stdlibTimeVersion=2.6.0
