Update the time dependency

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,4 +11,4 @@ githubSpotbugsVersion=6.0.18
 ballerinaLangVersion=2201.12.0-20250228-201300-8d411a0f
 
 # Test dependency
-stdlibTimeVersion=2.6.0
+stdlibTimeVersion=2.7.0-20250304-133100-009bfd7
